integration/snapshots/query-requirement-from-toml_stdout.snap
---
source: xtask/src/tests.rs
expression: stdout
---
$ duvet query --check implementation -q token
    Starting duvet in query mode...
  Extracting requirements
    Scanning sources
     Scanned 2 sources 
     Parsing annotations
      Parsed 2 annotations 
     Loading specifications
      Loaded 1 specifications 
     Mapping sections
      Mapped 1 sections 
    Matching references
     Matched 2 references 

Implementation: ✓ PASS

  Total requirements: 1
  Fully implemented: 1
  Incomplete implementation: 0
  Mixed implementation: 0
  TODO: 0
  Not implemented: 0

Overall: ✓ PASS
