integration/snapshots/query-test-all-pass_stdout.snap
---
source: xtask/src/tests.rs
assertion_line: 317
expression: stdout
---
$ duvet query --check test --verbose
    Starting duvet in query mode...
  Extracting requirements
   Extracted requirements from 1 specifications 
    Scanning sources
     Scanned 7 sources 
     Parsing annotations
      Parsed 17 annotations 
     Loading specifications
      Loaded 1 specifications 
     Mapping sections
      Mapped 7 sections 
    Matching references
     Matched 17 references 
     Running test annotation coverage check...
     
Tests: ✓ PASS

  Total requirements: 2
  Fully tested: 2
  Incomplete tests: 0
  Not tested: 0

  ☞ Fully tested
    ╭─[src/lib.rs:14:5]
 13 │     
 14 │ ╭─▶ //= spec.md#section-3
 15 │ │   //= type=test
 16 │ ├─▶ //# This MUST be an implementation with a test
    · ╰──── Test
 17 │     
    ╰────

  ☞ Fully tested
    ╭─[src/lib.rs:22:5]
 21 │     
 22 │ ╭─▶ //= spec.md#section-4
 23 │ │   //= type=test
 24 │ ├─▶ //# This is not a requirement, and has a test
    · ╰──── Test
 25 │     
    ╰────



Overall: ✓ PASS
