integration/snapshots/query-verbose-empty-quote_stderr.snap
---
source: xtask/src/tests.rs
expression: stderr
---
$ duvet query --check implementation --verbose
EXIT: Some(1)
    Starting duvet in query mode...
  Extracting requirements
   Extracted requirements from 1 specifications 
    Scanning sources
     Scanned 2 sources 
     Parsing annotations
      Parsed 2 annotations 
     Loading specifications
      Loaded 1 specifications 
     Mapping sections
      Mapped 1 sections 
    Matching references
     Matched 2 references 
     Running implementation annotation coverage check...

Implementation: ✗ FAIL

  Total requirements: 2
  Fully implemented: 1
  Incomplete implementation: 0
  Mixed implementation: 0
  TODO: 0
  Not implemented: 1

  × Missing annotation
  help: 
        //= spec.md#section-1
        //= type=implementation
        //# This MUST be a requirement
        


  ☞ Fully Implemented
   ╭─[src/lib.rs:1:5]
 1 │ //= spec.md#section-1
   ·     ────────┬────────
   ·             ╰── Implemented
 2 │ //= type=spec
   ╰────


Overall: ✗ FAIL
