integration/snapshots/query-witness-universal-agreement_stdout.snap
---
source: xtask/src/tests.rs
expression: stdout
---
$ duvet query -c coverage -r report-a.xml -r report-b.xml -f jacoco-xml --verbose
    Starting duvet in query mode...
  Extracting requirements
   Extracted requirements from 1 specifications 
    Scanning sources
     Scanned 3 sources 
     Parsing annotations
      Parsed 3 annotations 
     Loading specifications
      Loaded 1 specifications 
     Mapping sections
      Mapped 1 sections 
    Matching references
     Matched 3 references 
     Running test execution correlation check...
    Coverage model: 2 file(s) language-aware (verified), 0 file(s) degraded — no classifier (verified)
  
Coverage: ✓ PASS

  Coverage reports checked: 2
  Executed tests: 1
  Executed implementations: 1
  Successful correlations: 1
  Failed correlations: 0
  Tests with no implementation: 0
  Unwitnessed tests: 0
  Unwitnessable targets: 0

  ☞ Successful correlation
   ╭─[src/test/java/com/example/ImplTest.java:5:13]
 4 │         public void testThing() {
 5 │ ╭─▶         //= spec.md#section-1
 6 │ │           //= type=test
 7 │ ├─▶         //# This MUST do the thing
   · ╰──── Test annotation
 8 │             new Impl().doThing();
   ╰────
  help: discharged by report-a.xml (executed)
        discharged by report-b.xml (executed)

Advice: 
  ☞ Related context for:
  │  Successful correlation
   ╭─[src/main/java/com/example/Impl.java:5:13]
 4 │         public void doThing() {
 5 │ ╭─▶         //= spec.md#section-1
 6 │ │           //= type=implementation
 7 │ ├─▶         //# This MUST do the thing
   · ╰──── Executed implementation
 8 │             run();
   ╰────

  ☞ Executed annotations

Advice: 
  ☞ Related context for:
  │  Executed annotations
   ╭─[src/test/java/com/example/ImplTest.java:5:13]
 4 │         public void testThing() {
 5 │ ╭─▶         //= spec.md#section-1
 6 │ │           //= type=test
 7 │ ├─▶         //# This MUST do the thing
   · ╰──── Executed test
 8 │             new Impl().doThing();
   ╰────

Advice: 
  ☞ Related context for:
  │  Executed annotations
   ╭─[src/main/java/com/example/Impl.java:5:13]
 4 │         public void doThing() {
 5 │ ╭─▶         //= spec.md#section-1
 6 │ │           //= type=implementation
 7 │ ├─▶         //# This MUST do the thing
   · ╰──── Executed implementation
 8 │             run();
   ╰────



Overall: ✓ PASS
